Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextTextObj.quorum
class Main
    action Main
        Text t
        t:SetValue("text")
        text txt
        txt = cast(text, t)
        if txt = "true"
            output "passed"
        end
    end
end