Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberTextObjField.quorum
class main
    Text t
    number num
    action Main
        t:SetValue(true)
        num = cast(number, t)
    end
end